tests/namespace/fail001.ds
namespace ns1 {
struct ns2 {};
namespace ns2 {}
}
